[gd_scene load_steps=2 format=2]

[ext_resource path="res://main_scenes/main_menu/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="SpacerL" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 600.0
grow_horizontal = 2
size_flags_horizontal = 3

[node name="MenuButtons" type="VBoxContainer" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 681.0
margin_bottom = 600.0
grow_vertical = 2
size_flags_horizontal = 3
alignment = 1

[node name="play_game" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 266.0
margin_right = 339.0
margin_bottom = 286.0
text = "Game"
__meta__ = {
"_edit_lock_": true
}

[node name="tutorial" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 290.0
margin_right = 339.0
margin_bottom = 310.0
text = "Tutorial"
__meta__ = {
"_edit_lock_": true
}

[node name="exit" type="Button" parent="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons"]
margin_top = 314.0
margin_right = 339.0
margin_bottom = 334.0
text = "Exit"
__meta__ = {
"_edit_lock_": true
}

[node name="SpacerR" type="Control" parent="CanvasLayer/MarginContainer/HBoxContainer"]
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons/play_game" to="." method="_on_play_game_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons/tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/HBoxContainer/MenuButtons/exit" to="." method="_on_exit_pressed"]
